[tool.poetry]
name = "mastodon-rendaino-tombstone"
version = "0.1.0"
description = ""
authors = ["kelvin27315"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kelvin27315/mastodon-rendaino-tombstone"

[tool.poetry.dependencies]
python = "^3.11.4"
pandas = "^2.0.3"
mastodon-py = "^1.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
